@@ -2267,15 +2267,14 @@ sub define_objects_from_sources ($$$$$$$)
 #
 # This setup can be the case of a testsuite containing lots (>100) of
 # small C programs, all testing the same set of source files.
-my $subobjnamenum = 0;
 sub subobjname (@)
 {
     my $key = "@_";
 
     return $subobjvar{$key} if exists $subobjvar{$key};
 
-    ++$subobjnamenum;
-    my $name = "am__objects_${subobjnamenum}";
+    my $num = 1 + keys (%subobjvar);
+    my $name = "am__objects_${num}";
     $subobjvar{$key} = $name;
     return $name;
 }
